--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <img src="/textures/back_day.png>
-</body>
+  <head>
+    
+  </head>
+  <body>
+    <img src="/textures/back_day.png>
+  </body>
 </html>
